--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
     "Database":
     {
-            "database": "Bancomulti",
-            "host": "localhost",
-            "user": "gabrielschaidhau",
-            "password": ""
-    }
+        "database": "",
+        "host": "",
+        "user": "",
+        "password": ""
+    },
+    "environment": "development"
 }
