--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "leilao-servicos",
-  "version": "0.0.0",
-  "description": "Ferramenta que gerencia leilões online de serviços.",
-  "main": "App.js",
-  "repository": "",
-  "authors": 
-  [
+    "name": "leilao-servicos",
+    "version": "1.0.0",
+    "description": "Web service to interact with interface for services auction.",
+    "main": "App.js",
+    "constributors":
+    [
+        {
+            "name": "Allisson",
+            "email": "alndedigo@gmail.com"
+        },
+        {
+            "name": "Eduardo",
+            "email": "eduardosouza.developer@gmail.com"
+        },
+        {
+            "name": "Gabriel Schaidhauer",
+            "email": "gabriel.schaidhauer@gmail.com"
+        },
+        {
+            "name": "Gilberto",
+            "email": "beto.wiatrowski@gmail.com"
+        },
+        {
+            "name": "Rafael",
+            "email": "rafael.bke@gmail.com"
+        }
+    ],
+    "repository":
     {
-      "nome": "Allisson",
-      "email":"alndedigo@gmail.com"
+        "type": "git",
+        "url": "https://github.com/gabrielSchaidhauer/LeilaoServicos"
     },
+    "bugs":
     {
-      "nome":"Eduardo",
-      "email":"eduardosouza.developer@gmail.com"
+        "email": "gabriel.schaidhauer@gmail.com"
     },
-    { 
-      "nome":"Gabriel Schaidhauer",
-      "email":"gabriel.schaidhauer@gmail.com"
-    },
+    "dependencies":
     {
-      "nome":"Gilberto",
-      "email":"beto.wiatrowski@gmail.com"
+        "express": "*",
+        "mysql": "*"
     },
-    {
-      "nome": "Rafael",
-      "email":"rafael.bke@gmail.com"
-    }
-  ],
-  "dependencies": 
-  {
-    "express": "~3.2.4",
-    "mysql": "2.10.2"
-  }
+    "devDependencies": {},
+    "private": true
 }
