Criação do controle de sessão para o recurso leilao, e alterações no servidor de aplicação.

--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
         "user": "",
         "password": ""
     },
-    "environment": "development"
+    "environment": "development",
+    "port" : 3000
 }
