Migração para mongoDB, criação de todas as DAO já operando com Mongo e criação de algoritmo do vencedor

--- a/config.json
+++ b/config.json
@@ -1,10 +1,11 @@
 {
-    "Database":
+    "database":
     {
-        "database": "",
+        "name": "",
         "host": "",
         "user": "",
-        "password": ""
+        "password": "",
+        "port": ""
     },
     "environment": "development",
     "port" : 3000
