--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
       "email": "gabriel.schaidhauer@gmail.com"
     },
     {
-      "name": "Gilberto",
-      "email": "beto.wiatrowski@gmail.com"
-    },
-    {
       "name": "Rafael",
       "email": "rafael.bke@gmail.com"
     }
@@ -36,11 +32,10 @@
     "body-parser": "1.15.*",
     "express": "4.13.*",
     "mongodb": "2.1.*",
-    "node-session": "1.2.*"
+    "cookie-parser": "~1.0.*",
+    "express-session": "~1.0.*"
   },
   "devDependencies": {},
   "private": true,
-  "scripts": {
-    "start": "node App.js"
-  }
+  "scripts": {}
 }
